(#241) rsvg_new_node_light_source() - Fix cut&paste error between feDistantLight and feSpotLight

Sigh, I broke this and never caught it because there weren't tests for
filters with light sources.

https://gitlab.gnome.org/GNOME/librsvg/issues/241